bugfix: fix navbar on iOS devices
While all mobile [@media (hover: none)] devices are affected by this change, but there is no noticeable change on Android version of Chrome since it already seems to have been working correctly. Safari on iOS prevented submenus from opening up on touches, user had to hold the finger on appropriate button to enter text selection mode for :hover pseudoclass to work as intended.

--- a/ffxivws/static/style.css
+++ b/ffxivws/static/style.css
@@ -105,6 +105,7 @@ span.world-title > a:visited {
   padding: 1px 2px;
 }
 #navbar ul.navmenu.root,
+#navbar ul.navmenu.open,
 #navbar li.dropdown:hover > ul.navmenu,
 #navbar li.dropright:hover > ul.navmenu {
   display: flex;
@@ -134,7 +135,7 @@ span.world-title > a:visited {
   padding-bottom: 5px;
 }
 #navbar ul.navmenu > li.navbar-item {
-  padding: 0 0px;
+  padding: 0 5px;
   margin: 0 0px;
   user-select: none;
   cursor: default;
@@ -147,6 +148,12 @@ span.world-title > a:visited {
   flex-wrap: nowrap;
   justify-content: space-between;
   align-items: center;
+}
+@media (hover: none) {
+  #navbar ul.navmenu > li.navbar-item {
+    font-size: 3rem;
+    padding: 0 10px;
+  }
 }
 #navbar ul.navmenu > li.navbar-item.current {
   background-color: #abf3;
